--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Генератор значений</title>
+  <title>Генератор кушац Льву</title>
   <style>
     body {
       display: flex;
